Forgot to rebuild Jenkyll project

--- a/serve/about/index.html
+++ b/serve/about/index.html
@@ -10,7 +10,7 @@
 
     <title>About - Brandon To</title>
 
-    <link rel="canonical" href="http://localhost:3000//about/">
+    <link rel="canonical" href="http://brandonto.github.io//about/">
 
     
 
@@ -78,7 +78,6 @@
     </div>
     <!-- /.container -->
 </nav>
-
 
     <!-- Page Header -->
 <header class="intro-header">
