--- a/serve/resume/index.html
+++ b/serve/resume/index.html
@@ -10,7 +10,7 @@
 
     <title>Resume - Brandon To</title>
 
-    <link rel="canonical" href="http://localhost:3000//resume/">
+    <link rel="canonical" href="http://brandonto.github.io//resume/">
 
     
 
@@ -78,7 +78,6 @@
     </div>
     <!-- /.container -->
 </nav>
-
 
     <!-- Page Header -->
 <header class="intro-header">
