--- a/serve/index.html
+++ b/serve/index.html
@@ -10,7 +10,7 @@
 
     <title>Hello. - Brandon To</title>
 
-    <link rel="canonical" href="http://localhost:3000//">
+    <link rel="canonical" href="http://brandonto.github.io//">
 
     
 
@@ -78,7 +78,6 @@
     </div>
     <!-- /.container -->
 </nav>
-
 
     <!-- Page Header -->
 <header class="intro-header">
