--- a/serve/index.html
+++ b/serve/index.html
@@ -40,7 +40,10 @@
 
 <body>
 
-    <!-- Navigation -->
+    
+
+
+<!-- Navigation -->
 <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -51,26 +54,26 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Brandon To</a>
+            <a class="navbar-brand" href=".//">Brandon To</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="http://brandonto.github.io/">Home</a>
+                    <a href=".//">Home</a>
                 </li>
                 <li>
-                    <a href="http://brandonto.github.io/about/">About</a>
+                    <a href=".//about/">About</a>
                 </li>
                 <li>
-                    <a href="http://brandonto.github.io/projects/">Projects</a>
+                    <a href=".//projects/">Projects</a>
                 </li>
                 <li>
-                    <a href="http://brandonto.github.io/resume/">Resume</a>
+                    <a href=".//resume/">Resume</a>
                 </li>
                 <li>
-                    <a href="http://brandonto.github.io/contact/">Contact</a>
+                    <a href=".//contact/">Contact</a>
                 </li>
             </ul>
         </div>
@@ -112,14 +115,16 @@
 <hr>
 
 
-    <!-- Footer -->
+    
+
+<!-- Footer -->
 <footer>
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <ul class="list-inline text-center">
                     <li>
-                        <a href="//feed.xml">
+                        <a href="./feed.xml">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
@@ -148,8 +153,6 @@
         </div>
     </div>
 </footer>
-
-
 
 <!-- jQuery -->
 <script src="./js/jquery.min.js"></script>
