--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: "Hello."
 root: "."
-description: "You've stumbled upon my website! Here you will find projects I've worked on, my resume, and blog."
+description: "You've stumbled upon my website! Here you will find my blog, resume, and projects that I've worked on."
 ---
 
 <p>Under construction</p>
