--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 layout: page
 title: "Projects"
 root: ".."
-description: "Here are some projects that I've been involved with"
+description: "Here are some projects that I've been involved with over the years."
 ---
 
 <p>Under construction</p>
