--- a/serve/about/index.html
+++ b/serve/about/index.html
@@ -54,26 +54,26 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="..//">Brandon To</a>
+            <a class="navbar-brand" href="../">Brandon To</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="..//">Home</a>
+                    <a href="../">Home</a>
                 </li>
                 <li>
-                    <a href="..//about/">About</a>
+                    <a href="../about/">About</a>
                 </li>
                 <li>
-                    <a href="..//projects/">Projects</a>
+                    <a href="../projects/">Projects</a>
                 </li>
                 <li>
-                    <a href="..//resume/">Resume</a>
+                    <a href="../resume/">Resume</a>
                 </li>
                 <li>
-                    <a href="..//contact/">Contact</a>
+                    <a href="../contact/">Contact</a>
                 </li>
             </ul>
         </div>
@@ -101,9 +101,20 @@
 <div class="container">
 	<div class="row">
 		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-			<p>Under construction</p>
+			
 
+<div class="row">
+	<div class="col-lg-9">
+		<p>Hey, I'm Brandon. I'm a third year student at Carleton University studying Computer Systems Engineering. I <b>LOVE</b> programming. On my free time, I like to tinker with Computer Science to get away from all the low level hardware and electronics that I do in school.</p>
+	</div>
+	<div class="col-lg-3">
+		<img src="../img/about-pic.png" alt="me">
+	</div>
+</div>
 
+<p>You can follow me on <a href="https://github.com/brandonto">GitHub</a> to get an idea of what I'm currently up to.</p>
+
+<p>I'm always looking for interesting work. Want to hire me? Check out my <a href="..//resume/">resume</a> and send me an email so we can connect.</p>
 		</div>
 	</div>
 </div>
@@ -144,7 +155,7 @@
                         </a>
                     </li>
                 </ul>
-                <p class="copyright text-muted">Copyright &copy; Brandon To 2015</p>
+                <p class="copyright text-muted">Brandon To  &copy; 2015</p>
             </div>
         </div>
     </div>
