--- a/serve/projects/index.html
+++ b/serve/projects/index.html
@@ -54,26 +54,26 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="..//">Brandon To</a>
+            <a class="navbar-brand" href="../">Brandon To</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="..//">Home</a>
+                    <a href="../">Home</a>
                 </li>
                 <li>
-                    <a href="..//about/">About</a>
+                    <a href="../about/">About</a>
                 </li>
                 <li>
-                    <a href="..//projects/">Projects</a>
+                    <a href="../projects/">Projects</a>
                 </li>
                 <li>
-                    <a href="..//resume/">Resume</a>
+                    <a href="../resume/">Resume</a>
                 </li>
                 <li>
-                    <a href="..//contact/">Contact</a>
+                    <a href="../contact/">Contact</a>
                 </li>
             </ul>
         </div>
@@ -90,7 +90,7 @@
                 <div class="site-heading">
                     <h1>Projects</h1>
                     <hr class="small">
-                    <span class="subheading">Here are some projects that I've been involved with</span>
+                    <span class="subheading">Here are some projects that I've been involved with over the years.</span>
                 </div>
             </div>
         </div>
@@ -144,7 +144,7 @@
                         </a>
                     </li>
                 </ul>
-                <p class="copyright text-muted">Copyright &copy; Brandon To 2015</p>
+                <p class="copyright text-muted">Brandon To  &copy; 2015</p>
             </div>
         </div>
     </div>
