Started projects page

--- a/serve/index.html
+++ b/serve/index.html
@@ -148,7 +148,7 @@
                         </a>
                     </li>
                 </ul>
-                <p class="copyright text-muted">Brandon To  &copy; 2015</p>
+                <p class="copyright text-muted">Copyright &copy; 2015 Brandon To </p>
             </div>
         </div>
     </div>
