--- a/serve/contact/index.html
+++ b/serve/contact/index.html
@@ -15,13 +15,13 @@
     
 
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="..//css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="..//css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <!-- Pygments Github CSS -->
-    <link rel="stylesheet" href="..//css/syntax.css">
+    <link rel="stylesheet" href="../css/syntax.css">
 
     <!-- Custom Fonts -->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -54,26 +54,26 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="..//">Brandon To</a>
+            <a class="navbar-brand" href="../">Brandon To</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="..//">Home</a>
+                    <a href="../">Home</a>
                 </li>
                 <li>
-                    <a href="..//about/">About</a>
+                    <a href="../about/">About</a>
                 </li>
                 <li>
-                    <a href="..//projects/">Projects</a>
+                    <a href="../projects/">Projects</a>
                 </li>
                 <li>
-                    <a href="..//resume/">Resume</a>
+                    <a href="../resume/">Resume</a>
                 </li>
                 <li>
-                    <a href="..//contact/">Contact</a>
+                    <a href="../contact/">Contact</a>
                 </li>
             </ul>
         </div>
@@ -159,7 +159,7 @@
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <ul class="list-inline text-center">
                     <li>
-                        <a href="..//feed.xml">
+                        <a href="../feed.xml">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
@@ -183,20 +183,20 @@
                         </a>
                     </li>
                 </ul>
-                <p class="copyright text-muted">Brandon To  &copy; 2015</p>
+                <p class="copyright text-muted">Copyright &copy; 2015 Brandon To </p>
             </div>
         </div>
     </div>
 </footer>
 
 <!-- jQuery -->
-<script src="..//js/jquery.min.js"></script>
+<script src="../js/jquery.min.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="..//js/bootstrap.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
 
 <!-- Custom Theme JavaScript -->
-<script src="..//js/script.js"></script>
+<script src="../js/script.js"></script>
 
 
 </body>
