--- a/serve/resume/index.html
+++ b/serve/resume/index.html
@@ -101,7 +101,9 @@
 <div class="container">
 	<div class="row">
 		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-			<p>Under construction</p>
+			
+
+<h3>Under construction</h3>
 
 
 		</div>
