--- a/projects.html
+++ b/projects.html
@@ -8,12 +8,12 @@ description: "Here are some projects that I've been involved with over the years
 {% capture root %}{% if page.root %}{{ page.root }}{% else %}{{ post.root }}{% endif %}{%endcapture%}
 
 <div class="row project-listing">
-	<div class="col-lg-4">
+	<!--div class="col-lg-4">
 		<a class="text-center" href="{{ root }}/img/sdl-space-shooter.png"> 
 			<img class="project-image" src="{{ root }}/img/sdl-space-shooter.png" alt="Space Shooter">
 		</a>
-	</div>
-	<div class="col-lg-8">
+	</div-->
+	<!--div class="col-lg-8"-->
 		<div class="row">
 			<div class="project-title">
 				<a href="https://github.com/brandonto/sdl-space-shooter">Space Shooter</a>
@@ -23,16 +23,16 @@ description: "Here are some projects that I've been involved with over the years
 		<div class="row">
 			<p>A 2D scrolling space shooter written in C++ using SDL2. Based on old school arcade titles like Galaga and R-Type. This game was made to be as "ship-worthy" as possible. Which means a lot of time was put into the minor details.</p>
 		</div>
-	</div>
+	<!--/div-->
 </div>
 
 <div class="row project-listing">
-	<div class="col-lg-4">
+	<!--div class="col-lg-4">
 		<a class="text-center" href="{{ root }}/img/projector-class-diagram.png">
 			<div class="project-image" style="background-image:{{ root }}/img/projector-class-diagram.png"></div>
 		</a>
-	</div>
-	<div class="col-lg-8">
+	</div-->
+	<!--div class="col-lg-8"-->
 		<div class="row">
 			<div class="project-title">
 				<a href="https://github.com/nhatho/environment-simulated-study-room">Environment Simulated Study Room</a>
@@ -42,5 +42,5 @@ description: "Here are some projects that I've been involved with over the years
 		<div class="row">
 			<p>A projector system created for the Discovery Centre at Carleton University. The system provides synchronized video and audio streaming to three projectors. It can be controlled through the web application or an IR remote.</p>
 		</div>
-	</div>
+	<!--/div-->
 </div>
