--- a/serve/resume/index.html
+++ b/serve/resume/index.html
@@ -103,9 +103,83 @@
 		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 			
 
-<h3>Under construction</h3>
+<h3>Skills</h3>
+<hr/>
 
+<div class="project-listing">
+	<div class="row">
+		<div class="under-padding">
+			<div class="project-title under-padding">Programming Languages</div>
+				C++, C, Python, x86 Assembly, Scheme, Java, PHP, Lua
+		</div>
+		<div class="under-padding">
+			<div class="project-title under-padding">Markup Languages</div>
+				HTML, XML
+		</div>
+		<div class="under-padding">
+			<div class="project-title under-padding">Database Technologies</div>
+				MySQL, SQLite
+		</div>
+		<div class="under-padding">
+			<div class="project-title under-padding">Version Control Software</div>
+				Git, Subversion
+		</div>
+		<div class="under-padding">
+			<div class="project-title under-padding">Platforms</div>
+				Linux (Debian), Windows
+		</div>
+		<div class="under-padding">
+			<div class="project-title under-padding">Hardware</div>
+				68HC12, Raspberry Pi
+		</div>
+	</div>
+</div>
 
+<h3>Experience</h3>
+<hr/>
+
+<div class="project-listing">
+	<div class="row under-padding">
+		<div class="project-title">SkyWave Mobile Communications</div>
+		Verification Engineer Intern
+		<div class="project-timeframe">Sept 2013 - Aug 2014</div>
+	</div>
+</div>
+
+<h3>Education</h3>
+<hr/>
+
+<div class="project-listing">
+	<div class="row under-padding">
+		<div class="project-title">Bachelor of Engineering, Computer Systems Engineering</div>
+		Carleton University, Ottawa, Ontario
+		<div class="project-timeframe">Sept 2011 - Present</div>
+	</div>
+	<div class="row">
+		<ul>
+			<li>CGPA: 10.41/12 (A-)</li>
+			<li>Murdoch Maxwell MacOdrum Scholarship, 2013</li>
+			<li>Claude Bissell School Scholarship, 2012</li>
+			<li>Entrance Scholarship, 2011</li>
+			<li>Dean’s Honour List, Carleton University, 2011-2012, 2012-2013</li>
+			<li>Expected to graduate in 2016</li>
+		</ul>
+	</div>
+</div>
+
+<div class="project-listing">
+	<div class="row under-padding">
+		<div class="project-title">Coursera</div>
+		<a href="http://www.coursera.org">www.coursera.org</a>
+		<div class="project-timeframe">June 2013 - Present</div>
+	</div>
+	<div class="row">
+		<ul>
+			<li><a href="https://www.coursera.org/course/comnetworks">Computer Networks</a></li>
+			<li><a href="https://www.coursera.org/course/startup">Startup Engineering</a></li>
+		</ul>
+	</div>
+</div>
 		</div>
 	</div>
 </div>
