--- a/serve/projects/index.html
+++ b/serve/projects/index.html
@@ -103,43 +103,30 @@
 		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 			
 
-<div class="row project-listing">
-	<!--div class="col-lg-4">
-		<a class="text-center" href="../img/sdl-space-shooter.png"> 
-			<img class="project-image" src="../img/sdl-space-shooter.png" alt="Space Shooter">
-		</a>
-	</div-->
-	<!--div class="col-lg-8"-->
-		<div class="row">
-			<div class="project-title">
-				<a href="https://github.com/brandonto/sdl-space-shooter">Space Shooter</a>
-			</div>
-			<div class="project-timeframe">Aug 2014 - Feb 2015</div>
+<div class="project-listing">
+	<div class="row">
+		<div class="project-title">
+			<a href="https://github.com/brandonto/sdl-space-shooter">Space Shooter</a>
 		</div>
-		<div class="row">
-			<p>A 2D scrolling space shooter written in C++ using SDL2. Based on old school arcade titles like Galaga and R-Type. This game was made to be as "ship-worthy" as possible. Which means a lot of time was put into the minor details.</p>
-		</div>
-	<!--/div-->
+		<div class="project-timeframe">Aug 2014 - Feb 2015</div>
+	</div>
+	<div class="row">
+		<p>A 2D scrolling space shooter written in C++ using SDL2. Based on old school arcade titles like Galaga and R-Type. This game was made to be as "ship-worthy" as possible. Which means a lot of time was put into the minor details.</p>
+	</div>
 </div>
 
-<div class="row project-listing">
-	<!--div class="col-lg-4">
-		<a class="text-center" href="../img/projector-class-diagram.png">
-			<div class="project-image" style="background-image:../img/projector-class-diagram.png"></div>
-		</a>
-	</div-->
-	<!--div class="col-lg-8"-->
-		<div class="row">
-			<div class="project-title">
-				<a href="https://github.com/nhatho/environment-simulated-study-room">Environment Simulated Study Room</a>
-			</div>
-			<div class="project-timeframe">Oct 2014 - Dec 2014</div>
+<div class="project-listing">
+	<div class="row">
+		<div class="project-title">
+			<a href="https://github.com/nhatho/environment-simulated-study-room">Environment Simulated Study Room</a>
 		</div>
-		<div class="row">
-			<p>A projector system created for the Discovery Centre at Carleton University. The system provides synchronized video and audio streaming to three projectors. It can be controlled through the web application or an IR remote.</p>
-		</div>
-	<!--/div-->
+		<div class="project-timeframe">Oct 2014 - Dec 2014</div>
+	</div>
+	<div class="row">
+		<p>A projector system created for the Discovery Centre at Carleton University. The system provides synchronized video and audio streaming to three projectors. It can be controlled through the web application or an IR remote.</p>
+	</div>
 </div>
+
 		</div>
 	</div>
 </div>
