Removed my name from page title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: "Hello."
+title: "Home"
+heading: "Hello."
 root: "."
 description: "You've stumbled upon my website! Here you will find my blog, resume, and projects that I've worked on."
 ---
