--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: "Projects"
+heading: "Projects"
 root: ".."
 description: "Here are some projects that I've been involved with over the years."
 ---
