--- a/serve/about/index.html
+++ b/serve/about/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Personal website of Brandon To">
 
-    <title>About - Brandon To</title>
+    <title>About</title>
 
     <link rel="canonical" href="http://brandonto.github.io//about/">
 
