--- a/serve/projects/index.html
+++ b/serve/projects/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Personal website of Brandon To">
 
-    <title>Projects - Brandon To</title>
+    <title>Projects</title>
 
     <link rel="canonical" href="http://brandonto.github.io//projects/">
 
