--- a/serve/index.html
+++ b/serve/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Personal website of Brandon To">
 
-    <title>Hello. - Brandon To</title>
+    <title>Home</title>
 
     <link rel="canonical" href="http://brandonto.github.io//">
 
