--- a/serve/resume/index.html
+++ b/serve/resume/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Personal website of Brandon To">
 
-    <title>Resume - Brandon To</title>
+    <title>Resume</title>
 
     <link rel="canonical" href="http://brandonto.github.io//resume/">
 
