--- a/about.html
+++ b/about.html
@@ -18,4 +18,4 @@ description: "A little bit about me..."
 
 <p>You can follow me on <a href="https://github.com/brandonto">GitHub</a> to get an idea of what I'm currently up to.</p>
 
-<p>I'm always looking for interesting work. Want to hire me? Check out my <a href="{{ root }}/resume/">resume</a> and send me an email so we can connect.</p>
+<p>I'm always looking for interesting work. Want me on your team? Check out my <a href="{{ root }}/resume/">resume</a> and send me an email so we can connect.</p>
