--- a/serve/about/index.html
+++ b/serve/about/index.html
@@ -114,7 +114,7 @@
 
 <p>You can follow me on <a href="https://github.com/brandonto">GitHub</a> to get an idea of what I'm currently up to.</p>
 
-<p>I'm always looking for interesting work. Want to hire me? Check out my <a href="../resume/">resume</a> and send me an email so we can connect.</p>
+<p>I'm always looking for interesting work. Want me on your team? Check out my <a href="../resume/">resume</a> and send me an email so we can connect.</p>
 		</div>
 	</div>
 </div>
