--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,12 @@ description: "For questions or business inquiries:"
 ---
 
 <p>Fill out the form below to send me a message and I will try to get back to you within 24 hours!</p>
+
+<p>Under Construction</p>
 <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
 <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
 <!-- NOTE: To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
-<form name="sentMessage" id="contactForm" novalidate>
+<!--form name="sentMessage" id="contactForm" novalidate>
     <div class="row control-group">
         <div class="form-group col-xs-12 floating-label-form-group controls">
             <label>Name</label>
@@ -46,4 +48,4 @@ description: "For questions or business inquiries:"
             <button type="submit" class="btn btn-default">Send</button>
         </div>
     </div>
-</form>
+</form-->
