--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@ description: "For business inquires, contact me"
 	<div class="row">
 		<div class="under-padding">
 			<div class="project-title under-padding">Programming Languages</div>
-				C++, C, Python, x86 Assembly, Scheme, Java, PHP, Lua
+				C++, C, Python, Java, Lua
 		</div>
 		<div class="under-padding">
 			<div class="project-title under-padding">Markup Languages</div>
@@ -35,7 +35,7 @@ description: "For business inquires, contact me"
 		</div>
 		<div class="under-padding">
 			<div class="project-title under-padding">Hardware</div>
-				68HC12, Raspberry Pi
+				ARM Cortex M microcontrollers, 68HC12, Raspberry Pi
 		</div>
 	</div>
 </div>
@@ -62,11 +62,11 @@ description: "For business inquires, contact me"
 	</div>
 	<div class="row">
 		<ul>
-			<li>CGPA: 10.41/12 (A-)</li>
+			<li>CGPA: 3.5/4 (A-)</li>
 			<li>Murdoch Maxwell MacOdrum Scholarship, 2013</li>
 			<li>Claude Bissell School Scholarship, 2012</li>
 			<li>Entrance Scholarship, 2011</li>
-			<li>Dean’s Honour List, Carleton University, 2011-2012, 2012-2013</li>
+			<li>Dean’s Honour List, Carleton University, 2011-2012, 2012-2013, 2014-2015</li>
 			<li>Expected to graduate in 2016</li>
 		</ul>
 	</div>
