--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,16 @@ root: ".."
 description: "For questions or business inquiries:"
 ---
 
-<p>Fill out the form below to send me a message and I will try to get back to you within 24 hours!</p>
+<p>Email: brandon.chan.to@gmail.com</p>
+<p>Phone: (613) 709-0080</p>
 
-<p>Under Construction</p>
+<br>
+
+<p>If you can't reach me, I will try to get back to you within 24 hours!</p>
+
+<!--p>Fill out the form below to send me a message and I will try to get back to you within 24 hours!</p>
+
+<p>Under Construction</p-->
 <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
 <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
 <!-- NOTE: To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
