--- a/about.html
+++ b/about.html
@@ -12,10 +12,10 @@ description: "A little bit about me..."
 		<img src="{{ root }}/img/about-pic.png" alt="me">
 	</div>
 	<div class="col-lg-9">
-		<p>Hey, I'm Brandon. I'm a fourth year student at Carleton University studying Computer Systems Engineering. I <b>LOVE</b> programming. On my free time, I like to tinker with programming projects to get away from all the low level hardware and electronics that I do in school.</p>
+		<p>Hey, I'm Brandon. I'm a Software Developer at Solace Systems. I'm also a graduate from the Computer Systems Engineering program at Carleton University. I <b>LOVE</b> programming. On my free time, I like to tinker with projects and use the knowledge I've acquired from school and work to allow myself to be creative. I also enjoy badminton, rock climbing, and music.</p>
 	</div>
 </div>
 
 <p>You can follow me on <a href="https://github.com/brandonto">GitHub</a> to get an idea of what I'm currently up to.</p>
 
-<p>I'm always looking for interesting work. Want me on your team? Check out my <a href="{{ root }}/resume/">resume</a> and shoot me an email so we can chat.</p>
+<p>I'm always looking for interesting work. Want to chat? Check out my <a href="{{ root }}/resume/">resume</a> and shoot me an email so we can connect.</p>
