Added some responsibilities as bullet points in experiences.

--- a/resume.html
+++ b/resume.html
@@ -37,14 +37,23 @@ description: "For business inquires, contact me"
 
 <div class="project-listing">
 	<div class="row under-padding">
-		<div class="project-title">Solace Systems</div>
+		<div class="project-title under-padding">Solace Systems</div>
 		Software Developer
 		<div class="project-timeframe">May 2016 - Present</div>
+		<ul>
+			<li>Design and implementation of software features for portfolio of hardware message routers.</li>
+      <li>Integration and dockerization of software emulated router with various cloud platforms.</li>
+		</ul>
 	</div>
 	<div class="row under-padding">
-		<div class="project-title">SkyWave Mobile Communications</div>
+		<div class="project-title under-padding">SkyWave Mobile Communications</div>
 		Verification Engineer Intern
 		<div class="project-timeframe">Sept 2013 - Aug 2014</div>
+		<ul>
+			<li>Developed automated test scripts for stress testing, integration testing, regression testing, and unit testing a series of embedded communication devices.</li>
+			<li>Created robust test plans to thoroughly test series of said devices.</li>
+      <li>Maintained an internal database application for keeping track of employee ownership of said devices.</li>
+		</ul>
 	</div>
 </div>
 
